api casi completa

--- a/src/db/Tasks.json
+++ b/src/db/Tasks.json
@@ -3,7 +3,7 @@
         {
             "id":"jdjajdijdijsfodfjao",
             "title": "Limpiar el pizo",
-            "desctiption":"limpiar el pizo con la trapidora",
+            "description":"limpiar el pizo con la trapidora",
             "status":"pending",
             "createAt":"24/01/2024",
             "dueDate":"30/03/2024",
