--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node index.js",
     "dev": "nodemon ./src/index.js"
   },
@@ -14,6 +14,8 @@
   "description": "",
   "devDependencies": {
     "express": "^4.21.1",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
     "uuid": "^10.0.0"
   },
   "dependencies": {
