--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "mocha --require esm",
     "start": "node index.js",
     "dev": "nodemon ./src/index.js"
   },
@@ -13,8 +13,11 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "chai": "^5.1.1",
+    "esm": "^3.2.25",
     "express": "^4.21.1",
     "jest": "^29.7.0",
+    "mocha": "^10.7.3",
     "supertest": "^7.0.0",
     "uuid": "^10.0.0"
   },
