--- a/src/db/Tasks.json
+++ b/src/db/Tasks.json
@@ -1,15 +1,3 @@
 {
-    "Tasks":[
-        {
-            "id":"jdjajdijdijsfodfjao",
-            "title": "Limpiar el pizo",
-            "description":"limpiar el pizo con la trapidora",
-            "status":"pending",
-            "createAt":"24/01/2024",
-            "dueDate":"30/03/2024",
-            "priority":"low",
-            "tags":["Clean", "LowImportance"],
-            "note":"lavar el trapiador despues de usarlo"
-        }
-    ]
+  "Tasks": []
 }
